<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/quest_lay_pad"
    tools:context=".QuestionTwo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="@dimen/space"
        android:text="@string/Q2"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/ansTwoA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ans2a" />

    <CheckBox
        android:id="@+id/ansTwoB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ans2b" />

    <CheckBox
        android:id="@+id/ansTwoC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ans2c" />

    <TextView
        android:id="@+id/msg_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="previous"
            android:text="back" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="next"
            android:text="next" />
    </RelativeLayout>
</LinearLayout>