<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/quest_lay_pad"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/layout_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/quest_lay_pad">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/space"
            android:text="@string/Q1"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="remove"
                android:text="@string/removeOne" />

            <TextView
                android:id="@+id/one_ans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/space"
                android:text=" "
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="add"
                android:text="@string/addOne" />
        </LinearLayout>

        <TextView
            android:id="@+id/msg_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="next"
        android:text="@string/next" />
</LinearLayout>